--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "^13.5.4",
     "firebase": "^10.12.0",
     "next": "^13.5.4",
+    "next-auth": "^4.24.3",
     "postcss": "8.4.38",
     "react": "18.3.1",
     "react-dom": "18.3.1",
