--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
+    "bcrypt": "^5.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "^13.5.4",
     "firebase": "^10.12.0",
@@ -23,5 +24,8 @@
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2"
   }
 }
