--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --passWithNoTests -u",
+    "test:cover": "npm run test -- --coverage",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@types/node": "20.12.11",
@@ -26,6 +29,11 @@
     "typescript": "5.4.5"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2"
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
